--- a/workplace.html
+++ b/workplace.html
@@ -35,6 +35,7 @@
         coords="337,300,44"
         alt="Cup of coffee"
         href="coffee.htm"
+        title="I am a coffee"
       />
     </map>
   </body>
