--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <h2>Image Maps</h2>
     <p>
-      Click on the computer, the phone, or the cup of coffee to go to a new page
+      Click on the Orion, the phone, or the cup of coffee to go to a new page
       and read more about the topic:
     </p>
     <p id="mousecoordinates">Click on Image to Show Mouse Coordinates</p>
